--- a/pages/animaldrug/_content.yaml
+++ b/pages/animaldrug/_content.yaml
@@ -7,6 +7,6 @@
   description:
     - "Structured product information, including prescribing information, for approved animal drug products."
 - url: /animaldrug/phishpharm/
-  title: Animal drug Phish Pharm
+  title: Animal drug phish pharm
   description:
     - "Data from a free, searchable, literature database that details drug metabolism, depletion, and pharmacokinetics in fish."
