--- a/pages/animaldrug/label/_content.yaml
+++ b/pages/animaldrug/label/_content.yaml
@@ -1,10 +1,11 @@
 - "## About drug product labeling"
-- Drug manufacturers and distributors submit documentation about their products to FDA in the [Structured Product Labeling (SPL) format](http://labels.fda.gov/). The labeling is a "living document" that changes over time to reflect increased knowledge about the safety and effectiveness of the drug.
-- The openFDA drug product labels API returns data from these submissions. The labels are broken into sections, such as indications for use or purpose, adverse reactions, and so forth. There is considerable variation between drug products in terms of these sections and their contents, since the information required for safe and effective use varies with the unique characteristics of each drug product.
+- 'Drug manufacturers and distributors submit documentation about their products to FDA in the [Structured Product Labeling (SPL) format](http://labels.fda.gov/). The labeling is a "living document" that changes over time to reflect increased knowledge about the safety and effectiveness of the drug.'
+- "The openFDA drug product labels API returns data from these submissions. The labels are broken into sections, such as indications for use or purpose, adverse reactions, and so forth. There is considerable variation between drug products in terms of these sections and their contents, since the information required for safe and effective use varies with the unique characteristics of each drug product."
+- "For more background information on animal drug products, see [Animal and Veterinary Products] (http://www.fda.gov/AnimalVeterinary/Products/default.htm)."
 - "getting-started"
 - "downloads"
 - "### How to search this endpoint"
-- "Make API calls to `http://5c2d7184.ngrok.io/animaldrug/label.json` using search parameters for [fields specific to the animal drug labeling endpoint.](/animaldrug/label/reference/)"
+- "Make API calls to `https://api.fda.gov/animaldrug/label.json` using search parameters for [fields specific to the animal drug labeling endpoint.](/animaldrug/label/reference/)"
 - queryExplorer: oneLabel
 - queryExplorer: boxedWarning
 - queryExplorer: countByType
