--- a/pages/animaldrug/label/_infographics.yaml
+++ b/pages/animaldrug/label/_infographics.yaml
@@ -2,8 +2,8 @@
   short: "Submissions over time"
   dataset: SPL
   description:
-    - "The openFDA drug product labeling API provides data for drug labeling. Since mid-2009, labeling has been posted publicly in the [Structured Product Labeling (SPL) format](/data/spl/)."
-    - "This chart shows labeling submissions over time, by looking at their 'effective dates.' The search is limited to dates since June 2009, which excludes a small number of older submissions."
+    - "This chart shows animal drug labeling submissions over time, based on the ‘effective dates' of the submissions. The search is limited to dates since June 2009, which is when labeling began to be publicly posted in the [Structured Product Labeling (SPL) format](/data/spl/)."
+    - "The chart here is provided here to help illustrate how the animal drug labeling data can be queried and used. You can interact with the chart by (1) selecting a different filter (which changes the search parameter) or by (2) selecting a different field from the drop down list (which changes the field used to count the results). For example, observe how the results differ if you count using brand_name.exact rather than brand_name."
   countParam: "effective_time"
   filters:
     - title: "All animal drug labeling submissions"
@@ -20,7 +20,8 @@
   short: "Animal Drug interactions"
   dataset: SPL
   description:
-    - Drug product labeling must indicate known interactions with foods and other drug products. This chart shows top classes of drugs whose labeling notes interactions.
+    - "Drug product labeling must indicate known interactions with foods and other drug products. This chart shows top classes of animal drugs whose labeling includes information on drug interactions."
+    - "The chart here is provided here to help illustrate how the animal drug labeling data can be queried and used. You can interact with the chart by (1) selecting a different filter (which changes the search parameter) or by (2) selecting a different field from the drop down list (which changes the field used to count the results). For example, observe how the results differ if you count using brand_name.exact rather than brand_name."
   countParam: "openfda.generic_name.exact"
   filters:
     - title: "Labeling noting anthelmintics in the interactions section"
