--- a/pages/animaldrug/label/reference/_content.yaml
+++ b/pages/animaldrug/label/reference/_content.yaml
@@ -94,8 +94,7 @@
   - spl_unclassified_section
 - "### openFDA fields"
 - Different datasets use different drug identifiers—brand name, generic name, NDA, NDC, etc. It can be difficult to find the same drug in different datasets. And some identifiers, like pharmacologic class, are useful search filters but not available in all datasets.
-- OpenFDA features harmonization of drug identifiers, to make it easier to connect adverse event report records to other drug information. Drug products that appear in FAERS records are joined to the NDC dataset first on brand name, and if there is no brand name, on generic name. If that is succesful, further links are established to other datasets.
-- Roughly 86% of adverse event records have at least one openfda section. Because the harmonization process requires an exact match, some drug products cannot be harmonized in this fashion—for instance, if the drug name is misspelled. Some drug products will have openfda sections, while others will never, if there was no match during the harmonization process.
+- OpenFDA features harmonization of drug identifiers, to make it easier to connect adverse event report records to other drug information. Drug products that appear in ADAE records are joined to the NDC dataset first on NDC drug code. If that is succesful, further links are established to other datasets.
 - fields:
   - openfda
 - "datasets"
