fda-109, fda-126, fda-128 Round 2 of peer review changes. Added ADAE data page.

--- a/pages/animaldrug/phishpharm/_infographics.yaml
+++ b/pages/animaldrug/phishpharm/_infographics.yaml
@@ -20,7 +20,7 @@
   dataset: SPL
   description:
     - Drug product labeling must indicate known interactions with foods and other drug products. This chart shows top classes of drugs whose labeling notes interactions.
-  countParam: "openfda.generic_name.exact"
+  countParam: "route"
   filters:
     - title: "Labeling noting anthelmintics in the interactions section"
       searchParam: "drug_interactions:anthelmintics"
