--- a/pages/animaldrug/phishpharm/_explorers.yaml
+++ b/pages/animaldrug/phishpharm/_explorers.yaml
@@ -2,16 +2,16 @@ oneLabel:
   params:
     - search for all records with effective_time between Jun 01, 2011 and Dec 31, 2012.
     - limit to 1 record.
-  query: 'http://5c2d7184.ngrok.io/animaldrug/label.json?search=effective_time:[20110601+TO+20121231]&limit=1'
+  query: 'http://ec2-54-86-220-160.compute-1.amazonaws.com:8000/animaldrug/phishpharm.json?search=effective_time:[20110601+TO+20121231]&limit=1'
   description:
     - This query searches for all records in a certain date range, and asks for a single one.
-    - See the [reference](/animaldrug/label/reference/) for more about effective_time. Brackets [ ] are used to specify a range for date, number, or string fields.
+    - See the [reference](/animaldrug/phishpharm/reference/) for more about effective_time. Brackets [ ] are used to specify a range for date, number, or string fields.
   title: One drug product labeling record
 boxedWarning:
   params:
   - search for all records with a boxed_warning field.
   - limit to 1 record.
-  query: 'http://5c2d7184.ngrok.io/animaldrug/label.json?search=_exists_:boxed_warning'
+  query: 'http://ec2-54-86-220-160.compute-1.amazonaws.com:8000/animaldrug/phishpharm.json?search=_exists_:boxed_warning'
   description:
     - This query searches for labels with a Boxed Warning, and returns one result.
     - The `_exists_` search modifier lets you search for records that contain a specific field, no matter what its contents are. See the [API basics page](/api/) for more details.
@@ -19,7 +19,7 @@ boxedWarning:
 countByType:
   params:
   - count the field openfda.product_type (product type).
-  query: 'http://5c2d7184.ngrok.io/animaldrug/label.json?count=openfda.product_type.exact'
+  query: 'http://ec2-54-86-220-160.compute-1.amazonaws.com:8000/animaldrug/phishpharm.json?count=openfda.product_type.exact'
   description:
     - There are more labeling records for over-the-counter (OTC) drugs than prescription drugs.
     - The suffix .exact is required by openFDA to count the unique full phrases in the field openfda.product_type. Without it, the API will count each word in that field individually—HUMAN OTC DRUG would be counted as separate values, HUMAN and OTC and DRUG.
