fda-109, fda-126, fda-128 Round 3 of peer review changes.

--- a/pages/animaldrug/_content.yaml
+++ b/pages/animaldrug/_content.yaml
@@ -9,4 +9,4 @@
 - url: /animaldrug/phishpharm/
   title: Animal drug phish pharm
   description:
-    - "Data from a free, searchable, literature database that details drug metabolism, depletion, and pharmacokinetics in fish."
+    - "Data from a free, searchable, literature database that details drug metabolism and pharmacokinetics in fish."
