--- a/pages/animaldrug/label/_infographics.yaml
+++ b/pages/animaldrug/label/_infographics.yaml
@@ -2,7 +2,7 @@
   short: "Submissions over time"
   dataset: SPL
   description:
-    - "This chart shows animal drug labeling submissions over time, based on the ‘effective dates' of the submissions. The search is limited to dates since June 2009, which is when labeling began to be publicly posted in the [Structured Product Labeling (SPL) format](/data/spl/)."
+    - "This chart shows animal drug labeling submissions over time, based on the ‘effective_time' of the submissions. The search is limited to dates since June 2009, which is when labeling began to be publicly posted in the [Structured Product Labeling (SPL) format](/data/spl/)."
     - "The chart here is provided here to help illustrate how the animal drug labeling data can be queried and used. You can interact with the chart by (1) selecting a different filter (which changes the search parameter) or by (2) selecting a different field from the drop down list (which changes the field used to count the results). For example, observe how the results differ if you count using brand_name.exact rather than brand_name."
   countParam: "effective_time"
   filters:
