--- a/pages/animaldrug/phishpharm/_explorers.yaml
+++ b/pages/animaldrug/phishpharm/_explorers.yaml
@@ -1,26 +1,17 @@
-oneLabel:
+oneRecord:
   params:
-    - search for all records with effective_time between Jun 01, 2011 and Dec 31, 2012.
+    - search for all records with pub_date between 1992 and 1996.
     - limit to 1 record.
-  query: 'http://ec2-54-86-220-160.compute-1.amazonaws.com:8000/animaldrug/phishpharm.json?search=effective_time:[20110601+TO+20121231]&limit=1'
+  query: 'http://ec2-54-86-220-160.compute-1.amazonaws.com:8000/animaldrug/phishpharm.json?search=pub_date=[1992+TO+1996]&limit=1'
   description:
-    - This query searches for all records in a certain date range, and asks for a single one.
-    - See the [reference](/animaldrug/phishpharm/reference/) for more about effective_time. Brackets [ ] are used to specify a range for date, number, or string fields.
-  title: One drug product labeling record
-boxedWarning:
+    - This query searches for all records by publication year, and asks for a single one.
+    - See the [reference](/animaldrug/phishpharm/reference/) for more about pub_date. Brackets [ ] are used to specify a range for date, number, or string fields.
+  title: One phish pharm record
+countBySpecies:
   params:
-  - search for all records with a boxed_warning field.
-  - limit to 1 record.
-  query: 'http://ec2-54-86-220-160.compute-1.amazonaws.com:8000/animaldrug/phishpharm.json?search=_exists_:boxed_warning'
+    - count the number of records of each species.
+  query: 'http://ec2-54-86-220-160.compute-1.amazonaws.com:8000/animaldrug/phishpharm.json?count=species.exact'
   description:
-    - This query searches for labels with a Boxed Warning, and returns one result.
-    - The `_exists_` search modifier lets you search for records that contain a specific field, no matter what its contents are. See the [API basics page](/api/) for more details.
-  title: Product labeling record with a Boxed Warning
-countByType:
-  params:
-  - count the field openfda.product_type (product type).
-  query: 'http://ec2-54-86-220-160.compute-1.amazonaws.com:8000/animaldrug/phishpharm.json?count=openfda.product_type.exact'
-  description:
-    - There are more labeling records for over-the-counter (OTC) drugs than prescription drugs.
-    - The suffix .exact is required by openFDA to count the unique full phrases in the field openfda.product_type. Without it, the API will count each word in that field individually—HUMAN OTC DRUG would be counted as separate values, HUMAN and OTC and DRUG.
-  title: Count of drug labeling, by product type
+    - This query returns a count of records for each species.
+    - The suffix .exact is required by openFDA to count the unique full phrases in the field openfda.product_type. Without it, the API will count each word in that field individually—Trout, rainbow would be counted as separate values, Trout, and rainbow.
+  title: Count of phish pharm records, by species type
