--- a/pages/animaldrug/phishpharm/reference/_content.yaml
+++ b/pages/animaldrug/phishpharm/reference/_content.yaml
@@ -4,6 +4,7 @@
 - "downloads"
 - "### Results"
 - "For non-`count` queries, the `results` section includes matching reports returned by the API."
+- example: results
 - "## Field-by-field reference"
 - fields:
   - drug
@@ -15,6 +16,7 @@
   - sample
   - weight
   - water_temperature
+  - water_type
   - dosage
   - route
   - comments
@@ -26,6 +28,7 @@
   - pub_date
   - pub_citation
   - pub_title
+  - pub_url
   - genus_species
   - drug_class
   - half_life_detail
