fda-128 Minor tweaks to the phish pharm infographics.

--- a/pages/animaldrug/phishpharm/_fields.yaml
+++ b/pages/animaldrug/phishpharm/_fields.yaml
@@ -108,7 +108,7 @@ properties:
     possible_values:
     type: string
   pub_date:
-    description: "Original publication date of the study."
+    description: "Original publication year of the study."
     format:
     is_exact: false
     possible_values:
