--- a/pages/animaldrug/phishpharm/_infographics.yaml
+++ b/pages/animaldrug/phishpharm/_infographics.yaml
@@ -1,3 +1,22 @@
+- title: "Phish pharm drug records by water type"
+  short: "Drug records by water type"
+  dataset: SPL
+  description:
+    - "This is the openFDA API endpoint for pharmacokinetics data in fish. Phish-Pharm is a free, searchable, literature database that details drug metabolism, depletion, and pharmacokinetics in fish. Updated in 2014, the current version contains data from nearly 600 articles covering 175 aquatic species and over 200 drug and chemical compounds."
+  countParam: "water_type"
+  filters:
+    - title: "All phish pharm records"
+      searchParam: ""
+    - title: "Oxytetracycline records"
+      searchParam: 'drug.exact="Oxytetracycline"'
+    - title: "Flumequine records"
+      searchParam: 'drug.exact="Flumequine"'
+    - title: "Oxolinic acid records"
+      searchParam: 'drug.exact="Oxolinic acid"'
+    - title: "Enrofloxacin records"
+      searchParam: 'drug.exact="Enrofloxacin"'
+  type: Line
+  dateConstraint: false
 - title: "Phish pharm records over time"
   short: "Records over time"
   dataset: SPL
@@ -9,18 +28,13 @@
       searchParam: ""
     - title: "Catfish records"
       searchParam: "species:catfish"
+      countParam: "sample.exact"
     - title: "Oncorhynchus mykiss records"
       searchParam: 'genus_species.exact="Oncorhynchus mykiss"'
-    - title: "Blood sample records"
-      searchParam: "sample:blood"
-    - title: "Intestinal tract sample records"
-      searchParam: 'sample:"intestinal tract"'
-    - title: "Oxytetracycline records"
-      searchParam: 'drug.exact="Oxytetracycline"'
   type: Line
   dateConstraint: false
 - title: "Phish pharm sample types"
-  short: "Samples"
+  short: "Sample types"
   dataset: SPL
   description:
     - "This is the openFDA API endpoint for pharmacokinetics data in fish. Phish-Pharm is a free, searchable, literature database that details drug metabolism, depletion, and pharmacokinetics in fish. Updated in 2014, the current version contains data from nearly 600 articles covering 175 aquatic species and over 200 drug and chemical compounds."
