fda-126 More peer review updates.

--- a/pages/animaldrug/event/_infographics.yaml
+++ b/pages/animaldrug/event/_infographics.yaml
@@ -1,8 +1,8 @@
-- title: "Adverse animal drug event reports since 2016"
+- title: "Animal drug adverse event reports since 2016"
   short: "Reports over time"
   description:
     - "This is the openFDA API endpoint for animal drug adverse event reports. An adverse event report is submitted to the FDA’s Center for Veterinary Medicine (CVM) to report any undesirable experience associated with the use of an animal drug, including adverse reactions, product use errors, and product/manufacturing problems."
-    - "Section 514.80 (b) (21 CFR 514.80(b)) of FDA regulations requires applicants of approved new animal drug applications (NADAs) and approved abbreviated new animal drug applications (ANADAs) to report adverse drug events and product and manufacturing defects. This continuous monitoring of approved NADAs and ANADAs afford the primary means by which FDA’s Center for Veterinary Medicine (CVM) obtains information regarding potential problems with the safety and efficacy of marketed approved new animal drugs as well as potential product/manufacturing problems."
+    - "The chart below is provided here to help illustrate how the animal drug adverse event reports data can be queried and used. You can interact with the chart by (1) selecting a different filter (which changes the search parameter) or by (2) selecting a different field from the drop down list (which changes the field used to count the results). For example, observe how the results differ if you count using animal_species, serious_ae, primary_reporter.exact, drug.brand_name.exact or type_of_information.exact."
   countParam: "original_receive_date"
   filters:
     - title: "All adverse event reports"
